fix white space wrap to normal in seach bar

--- a/src/app/core/search/search.component.scss
+++ b/src/app/core/search/search.component.scss
@@ -3,6 +3,7 @@
   z-index: 1000;
   width: 40%;
 
+
   @media screen and (max-width: 700px) {
       width: 90%;
   }
@@ -36,6 +37,9 @@
     border-radius: 6px;
     color: black;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
+
+    white-space: normal;
+
 
     &:active  {
       display: block;
